--- a/Hackothon/index.html
+++ b/Hackothon/index.html
@@ -23,7 +23,7 @@
     </a>
   </div>
 
- 
+
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
     <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
     <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
@@ -50,8 +50,6 @@
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>Splash Team!</b></p><br>
       <img src="./CSS /images/logo-for-web.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo splash team" width="500" height="333">
-    </div>
-
 
     <div class="w3-col m6 w3-hide-small w3-padding-large">
       <p>Welcome to our website. we Splash Team lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
@@ -62,18 +60,26 @@
 </div>
 
 <div class="w3-row w3-center w3-dark-grey w3-padding-16">
-<!-- Lwando Layout -->
+  <h1> Do You Know How Much Water You Are Saving ?</h1>
+    <h1> Do You Know Your Water Situation ?</h1></span>
+ <div>
+                    <label for="exampleEmailInput">Household Occupants</label>
+                    <input class="u-full-width householdoccupants" type="number" placeholder="eg. 5">
+</div>
 
+<p>Please Enter Your Meter number reading:</p>
+                    <label for="exampleEmailInput">Reading(Morning)</label>
+                    <input class="u-full-width waterReadingmorning" type="number" placeholder="eg. 10" >
 
-
-
-<!-- /end -->
+                    <label for=""> Reading(Afternoon)</label>
+<input class="u-full-width waterReadingafternoon" type="number" placeholder="eg.80" >
+  <button type="submit"  class="calculateBtn" style="margin-top:64px">Calculate</button>
+  </div>
 </div>
 
 
 <div class="bgimg-2 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle">
-    <span class="w3-xxlarge w3-text-white w3-wide">PORTFOLIO</span>
+
   </div>
 </div>
 
@@ -132,9 +138,10 @@
 
 
 <div class="bgimg-3 w3-display-container w3-opacity-min">
+
+
   <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
-  </div>
+     <span class="w3-xxlarge w3-text-white w3-wide">
 </div>
 
 
@@ -144,15 +151,17 @@
 
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
- 
+
       <div id="googleMap" class="w3-round-large w3-greyscale" style="width:100%;height:400px;"></div>
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
+
+                        </div>
       </div>
- 
-      <form action="/action_page.php" target="_blank">
-        <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
+
+
+        <!-- <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
           <div class="w3-half">
             <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
           </div>
@@ -163,66 +172,25 @@
         <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
         <button class="w3-button w3-black w3-right w3-section" type="submit">
           <i class="fa fa-paper-plane"></i> SEND MESSAGE
-        </button>
-      </form>
+        </button> -->
+
     </div>
   </div>
 </div>
 
 
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">Lilo</span><br>
-    Team Leader
-    <div class="w3-xlarge w3-section">
-      <i class="fa fa-facebook-official w3-hover-opacity"></i>
-      <i class="fa fa-instagram w3-hover-opacity"></i>
-      <i class="fa fa-snapchat w3-hover-opacity"></i>
-      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-      <i class="fa fa-twitter w3-hover-opacity"></i>
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
-    </div>
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">Richard</span><br>
-    Projects co-ordinator
-    <div class="w3-xlarge w3-section">
-      <i class="fa fa-facebook-official w3-hover-opacity"></i>
-      <i class="fa fa-instagram w3-hover-opacity"></i>
-      <i class="fa fa-snapchat w3-hover-opacity"></i>
-      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-      <i class="fa fa-twitter w3-hover-opacity"></i>
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
-    </div>
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">lwando</span><br>
-    Head of Research
-    <div class="w3-xlarge w3-section">
-      <i class="fa fa-facebook-official w3-hover-opacity"></i>
-      <i class="fa fa-instagram w3-hover-opacity"></i>
-      <i class="fa fa-snapchat w3-hover-opacity"></i>
-      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-      <i class="fa fa-twitter w3-hover-opacity"></i>
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
-    </div>
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">Zubair</span><br>
-    Head of create and design
-    <div class="w3-xlarge w3-section">
-      <i class="fa fa-facebook-official w3-hover-opacity"></i>
-      <i class="fa fa-instagram w3-hover-opacity"></i>
-      <i class="fa fa-snapchat w3-hover-opacity"></i>
-      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-      <i class="fa fa-twitter w3-hover-opacity"></i>
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
-    </div>
-  </div>
-
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <div class="w3-xlarge w3-section">
+    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <i class="fa fa-snapchat w3-hover-opacity"></i>
+    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+  </div>
 </footer>
- 
+
 <script src="./JS/script.js" charset="utf-8"></script>
 
 </body>
